[project]
name = "zombie-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "flake8-annotations>=3.1.1",
    "flake8-bugbear>=24.12.12",
    "flake8-docstrings>=1.7.0",
    "flake8-mutable>=1.2.0",
    "pep8-naming>=0.14.1",
]
